WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
174372
WebDragClient build broken when !PLATFORM(COCOA) && !PLATFORM(GTK)
https://bugs.webkit.org/show_bug.cgi?id=174372
Summary
WebDragClient build broken when !PLATFORM(COCOA) && !PLATFORM(GTK)
Timothy Hatcher
Reported
2017-07-11 10:42:44 PDT
The didConcludeEditDrag() method is missing for other platforms. Patch to follow.
Attachments
Patch
(1.34 KB, patch)
2017-07-11 10:44 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews123 for ios-simulator-wk2
(964.83 KB, application/zip)
2017-07-11 12:51 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Timothy Hatcher
Comment 1
2017-07-11 10:44:07 PDT
Created
attachment 315130
[details]
Patch
Build Bot
Comment 2
2017-07-11 12:51:37 PDT
Comment on
attachment 315130
[details]
Patch
Attachment 315130
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/4102147
New failing tests: imported/w3c/IndexedDB-private-browsing/idbfactory_open12.html
Build Bot
Comment 3
2017-07-11 12:51:38 PDT
Created
attachment 315146
[details]
Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.5
Timothy Hatcher
Comment 4
2017-07-11 12:52:33 PDT
Test failures unrelated.
WebKit Commit Bot
Comment 5
2017-07-11 13:38:14 PDT
Comment on
attachment 315130
[details]
Patch Clearing flags on attachment: 315130 Committed
r219357
: <
http://trac.webkit.org/changeset/219357
>
WebKit Commit Bot
Comment 6
2017-07-11 13:38:16 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug