Fix a build failure in WebDragClient when !PLATFORM(COCOA) && !PLATFORM(GTK). https://bugs.webkit.org/show_bug.cgi?id=174372

Reviewed by Beth Dakin.

* WebProcess/WebCoreSupport/WebDragClient.cpp:
(WebKit::WebDragClient::didConcludeEditDrag): Added empty method.


Canonical link: https://commits.webkit.org/191198@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219357 268f45cc-cd09-0410-ab3c-d52691b4dbfc